# nn_terrain

./: .gitignore  .gitmodules  BuildInstructions.md  ReadMe.md  index.html  package-info.json.in  package-lock.json  package.json  settings.json
.github/workflows/: deploy-to-ghpages.yml
BuildInstructions/: index.html
README 2/: 91e7eb6d-8089-40b7-94e4-4fd970073c8d-Dd1NiGS6z--__1400__.avif  91e7eb6d-8089-40b7-94e4-4fd970073c8d-Dd1NiGS6z--__2295__.avif  91e7eb6d-8089-40b7-94e4-4fd970073c8d-Dd1NiGS6z--__730__.avif  9af60d6f-8d5b-463e-9570-b5a6e54a8515-46cCJ96hJF-__1471__.avif  f37bbe07-f65a-4a4f-acb1-6892ec202aac-o1T36na5GA-__1461__.avif  index.html
_includes/: artist-interview.md
assets/: DemoTerrain.pt
compile/: index.html
core/assets/css/: ds.css
core/assets/fonts/icomoon/demo/: index.html
core/assets/js/: search_index.json
docs/: nn.terrain.gui.maxref.xml  nn.terrain~.maxref.xml  nn_stylus.maxref.xml
hello-page/: index.html
hello-page/hello-child/: index.html
hello-page/hello-child/hello-grandchild/: index.html
installation/: index.html  nn-version-2o-EKXbxKu-__730__.avif  nn-version-2o-EKXbxKu-__940__.avif
instructions/: index.html
instructions/build-terrain/: index.html  latent-coord-pairs-vPsqcaaOo2-__1400__.avif  latent-coord-pairs-vPsqcaaOo2-__2546__.avif  latent-coord-pairs-vPsqcaaOo2-__730__.avif  training-vIB5nycY6J-__1400__.avif  training-vIB5nycY6J-__2634__.avif  training-vIB5nycY6J-__730__.avif
instructions/interact/: gui-y-MfiXnvvA-__1400__.avif  gui-y-MfiXnvvA-__2546__.avif  gui-y-MfiXnvvA-__730__.avif  index.html
instructions/interact/playback/: index.html
instructions/interact/stylus/: index.html
instructions/load-preset/: index.html
instructions/load-terrain/: index.html  load-pretrained-1-DLOHf9NtcV-__1400__.avif  load-pretrained-1-DLOHf9NtcV-__2592__.avif  load-pretrained-1-DLOHf9NtcV-__730__.avif
instructions/overview/: index.html  trajectory-EeA4pznGWu-__1400__.avif  trajectory-EeA4pznGWu-__2800__.avif  trajectory-EeA4pznGWu-__730__.avif
instructions/record-latents/: index.html  recording-32d0BFIPy8-__1400__.avif  recording-32d0BFIPy8-__2502__.avif  recording-32d0BFIPy8-__730__.avif
instructions/visualisation/: index.html  plot-fjiBQglLv_-__1400__.avif  plot-fjiBQglLv_-__1782__.avif  plot-fjiBQglLv_-__730__.avif
posts/: dan-7v3hjyOpbR-__1200__.avif  index.html  keigo-screenshot-2-WdUVyM1nLB-__1200__.avif  projects-full-EK8Fs89Dux-__1200__.avif
posts/annotated-portfolio/: collection-N9DSOuekWH-__1400__.avif  collection-N9DSOuekWH-__2580__.avif  collection-N9DSOuekWH-__730__.avif  index.html
posts/conversation-with-dan-hearn/: index.html
posts/conversation-with-jiatong-liu/: index.html
posts/conversation-with-keigo-yoshida/: index.html
posts/conversation-with-nico-garcia-peguinho/: index.html  nico-Ik3fTjtnPE-__1400__.avif  nico-Ik3fTjtnPE-__1757__.avif  nico-Ik3fTjtnPE-__730__.avif
posts/hello-post/: index.html
pre-trained/: index.html  m2l-demo-HtxkY6LrsV-__600__.avif  m2l-demo.pt  percussion-terrain-demo-_8_2U5z3uk-__600__.avif  stable-audio-terrain-demo.pt
search/: index.html
source/projects/nn_stylus/: nn_stylus.cpp
source/projects/nn_stylus.notepad/: nn_stylus.notepad.cpp
src/: 01-installation.md  02-instructions.md  03-pre-trained.md  04-build-instruction.md  CMakeLists.txt  build-instruction.md  home.md  installation.md  instructions.md  package-info.json.in  pre-trained.md
src/backend/: CMakeLists.txt  backend.cpp  backend.h
src/blog-posts/: annotated-portfolio.md  dan-hearn.md  jiatong-liu.md  keigo-yoshida.md  nico-garcia-peguinho.md
src/frontend/maxmsp/nn.terrain/: CMakeLists.txt  nn.terrain.cpp
src/frontend/maxmsp/nn.terrain.encode/: CMakeLists.txt  nn.terrain.encode.cpp
src/frontend/maxmsp/nn.terrain.gui/: CMakeLists.txt  nn.terrain.gui.cpp
src/frontend/maxmsp/nn.terrain.mc.gui/: CMakeLists.txt  nn.terrain.mc.gui.cpp
src/frontend/maxmsp/nn.terrain.record/: CMakeLists.txt  nn.terrain.record.cpp
src/frontend/maxmsp/nn.terrain_tilde/: CMakeLists.txt  nn.terrain_tilde.cpp
src/frontend/maxmsp/nn_terrain/: CMakeLists.txt  nn_terrain.cpp  terrain.h  utils.h
src/frontend/maxmsp/shared/: circular_buffer.h  min_path.h
src/instructions/: 01-overview.md  02-load-terrain.md  03-visualisation.md  04-build-terrain.md  05-record-latents.md  06-interact.md  06a-stylus  06a-stylus.md  06b-playback  06b-playback.md  load-terrain.md
src/tutorials/: hello-post.md
tags/: index.html
tags/blockquote/: index.html
tags/demos/: index.html  jt-U1wKsv7Oju-__1200__.avif  nico-Ik3fTjtnPE-__1200__.avif
tags/open-graph-image/: index.html
tags/syntax-highlighting/: index.html
tags/tutorials/: index.html
tags/widgets/: index.html
